px4_ws/logs/rgbd_slam/build.make.003.log.stderr
/home/odroid/MAV-Project/px4_ws/src/rgbd_slam/src/RosHandler.cpp: In member function 'void RosHandler::lpeCallback(geometry_msgs::PoseStamped)':
/home/odroid/MAV-Project/px4_ws/src/rgbd_slam/src/RosHandler.cpp:22:7: error: 'Eigen::Matrix4f' has no member named 'ropRightCorner'
  _lpe.ropRightCorner(3,1) << pos_read.pose.position.x, pos_read.pose.position.y, pos_read.pose.position.z;  // update translation vector
       ^
make[2]: *** [CMakeFiles/rgbd_slam.dir/src/RosHandler.cpp.o] Error 1
make[1]: *** [CMakeFiles/rgbd_slam.dir/all] Error 2
make: *** [all] Error 2
